opam-version: "2.0"
name: "lockdown"
version: "0.2.0"
synopsis: "A data at rest encryption tool."
description: "Lockdown is a user-friendly LUKS-based data at rest encryption tool designed for securing databases."
maintainer: "akileshjayaraman@proton.me"
authors: "0xtan3"
homepage: "https://github.com/0xtan3/lockdown"
depends: [
  "dune" {>= "2.8.0"}
  "ocaml" {>= "5.2.0"}
  "ocaml-lsp-server" {>= "1.6.0"}
  "alcotest" {>= "1.0.0"}
  "ocamlformat" {>= "0.18.0"}
]
build: [
  ["dune" "build" "-p" name]
]
